--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
         id: backend_url
         working-directory: ./infra
         run: |
-          BACKEND_URL=$(terraform output -raw backend_url)
+          BACKEND_URL=$(terraform output -json backend_url | jq -r '.')
           echo "BACKEND_URL=$BACKEND_URL" >> $GITHUB_OUTPUT
 
       # === FRONTEND ===
