--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,10 +63,9 @@ jobs:
         id: backend_url
         working-directory: ./infra
         run: |
-          BACKEND_URL=$(terraform output -raw backend_url | grep -o 'https://[^ ]*')
+          BACKEND_URL=$(terraform output -raw backend_url | grep -o 'https://[^: ]*')
           echo "Cleaned BACKEND_URL: $BACKEND_URL"
           echo "BACKEND_URL=$BACKEND_URL" >> $GITHUB_OUTPUT
-
       # === FRONTEND ===
       - name: Build & Push frontend image with backend URL
         run: |
