--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,6 +81,7 @@ jobs:
         run: terraform init
 
       - name: Deploy backend to Cloud Run 
+        if: steps.set_backend.outputs.changed == 'true'
         working-directory: ./infra
         run: |
           terraform apply \
@@ -116,6 +117,7 @@ jobs:
           docker push europe-west1-docker.pkg.dev/${{ secrets.PROJECT_ID }}/cartwish-repo/frontend:${{ github.sha }}
 
       - name: Deploy frontend to Cloud Run 
+      if: steps.set_frontend.outputs.changed == 'true'
         working-directory: ./infra
         run: |
           terraform apply \
