--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,18 +33,17 @@ jobs:
         id: check_backend
         run: |
           git fetch origin main --depth=2
-          if git diff --quiet origin/main -- backend; then
+          if git diff --quiet HEAD^ HEAD -- backend; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
           fi
-      
 
       - name: Check if frontend changed
         id: check_frontend
         run: |
           git fetch origin main --depth=2
-          if git diff --quiet origin/main -- frontendJS; then
+          if git diff --quiet HEAD^ HEAD -- frontendJS; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
