--- a/infra/.gitignore
+++ b/infra/.gitignore
@@ -1,1 +1,10 @@
+*.tfstate
+*.tfstate.*
+
+# Terraform local directories and lock files
 .terraform/
+.terraform.lock.hcl
+
+# Optional: ako koristiš bootstrap-bucket folder i želiš da ignorišeš njegove terraform fajlove
+bootstrap-bucket/.terraform/
+bootstrap-bucket/*.tfstate*
