--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GCP Cloud Run and Cloud Storage
+name: Deploy to GCP Cloud Run
 
 on:
   push:
@@ -13,8 +13,9 @@ env:
   REGION: europe-west1
   REPO_NAME: cartwish-repo
   BACKEND_NAME: cartwish-backend
-  FRONTEND_BUCKET: cartwish-frontend-bucket-${{ secrets.PROJECT_ID }}
+  FRONTEND_NAME: cartwish-frontend-bucket-${{ secrets.PROJECT_ID }}
   IMAGE_TAG: ${{ github.sha }}
+
 
 jobs:
   deploy:
@@ -28,15 +29,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-          service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+          workload_identity_provider: ${{secrets.WORKLOAD_IDENTITY_PROVIDER}}
+          service_account: ${{secrets.SERVICE_ACCOUNT_EMAIL}}
 
-      - name: Activate Service Account
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.PROJECT_ID }}
+
+      - name: Activate Service Account for gsutil
         run: |
           gcloud auth activate-service-account ${{ secrets.SERVICE_ACCOUNT_EMAIL }} --key-file=$GOOGLE_GHA_CREDS_PATH
+          gcloud config set project ${{ secrets.PROJECT_ID }}
+
 
       - name: Check if backend changed
         id: check_backend
@@ -64,11 +73,9 @@ jobs:
           terraform_version: 1.5.7
 
       - name: Setup Docker
-        if: steps.check_backend.outputs.changed == 'true'
         uses: docker/setup-buildx-action@v3
 
       - name: Configure Docker for Artifact Registry
-        if: steps.check_backend.outputs.changed == 'true'
         run: |
           gcloud auth configure-docker europe-west1-docker.pkg.dev
 
@@ -82,7 +89,7 @@ jobs:
         working-directory: ./infra
         run: terraform init
 
-      - name: Deploy backend to Cloud Run
+      - name: Deploy backend to Cloud Run 
         if: steps.check_backend.outputs.changed == 'true'
         working-directory: ./infra
         run: terraform apply -auto-approve -target=module.backend -var="backend_image_tag=${{ env.IMAGE_TAG }}"
@@ -115,20 +122,11 @@ jobs:
         working-directory: ./infra
         run: terraform apply -auto-approve -target=module.frontend
 
-      - name: Verify Google Cloud Authentication
-        if: steps.check_frontend.outputs.changed == 'true'
-        run: |
-          gcloud auth list
-          gcloud storage buckets list gs://$FRONTEND_BUCKET
 
       - name: Upload frontend to Cloud Storage
         if: steps.check_frontend.outputs.changed == 'true'
         run: |
-          if [ ! -d "./frontendJS/dist" ]; then
-            echo "Error: dist directory not found"
-            exit 1
-          fi
-          gsutil -m rsync -r ./frontendJS/dist gs://$FRONTEND_BUCKET/
+          gsutil -m rsync -r ./frontendJS/dist gs://cartwish-frontend-bucket-${{ secrets.PROJECT_ID }}/
 
       - name: Output Cloud Run and Storage URLs
         working-directory: ./infra
