--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,10 +31,20 @@ jobs:
 
 
       - name: Authenticate to Google Cloud
+        id: auth
         uses: google-github-actions/auth@v2
         with:
-          workload_identity_provider: ${{secrets.WORKLOAD_IDENTITY_PROVIDER}}
-          service_account: ${{secrets.SERVICE_ACCOUNT_EMAIL}}
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SERVICE_ACCOUNT_EMAIL }}
+
+      - name: Activate gcloud credentials for gsutil
+        run: |
+          gcloud auth activate-service-account --key-file="${{ steps.auth.outputs.credentials_file_path }}"
+
+      - name: Test gsutil access
+        run: |
+          echo "test" > testfile.txt
+          gsutil cp testfile.txt gs://cartwish-frontend-bucket-${{ secrets.PROJECT_ID }}/
 
 
       - name: Check if backend changed
