--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -103,7 +103,9 @@ jobs:
         if: steps.check_frontend.outputs.changed == 'true'
         working-directory: ./frontendJS
         env:
+          env:
           VITE_API_URL: ${{ steps.backend_url.outputs.BACKEND_URL }}/api
+          VITE_BASE_PATH: /cartwish-frontend-bucket-${{ secrets.PROJECT_ID }}/
         run: |
           npm ci
           npm run build -- --base=/
